# BC_FACE-REC

./: .gitignore  README.md  app.py  pyproject.toml
documentation/: eigenface generator.docx  ~$ep workflow.docx  ~$genface generator.docx
modules/: utils.py
sandbox/: analyze_eigenfaces.py  noiseGenerator-analyse.py  pca_mse_ssim_analysis.py  perf_test_peep.py  performance_results.csv
sandbox/eigenface_analysis/2/: eigenface_analysis.txt
sandbox/eigenface_analysis/subject12/: eigenface_analysis.txt
src/: app.py  config.py
src/modules/: analyze_eigenfaces.py  database.py  database_controller.py  eigenface generator.docx  eigenface.py  gui_controller.py  gui_controller_analyses.ipynb  image_preprocessing.py  main.py  noiseGenerator-analyse.py  noiseGenerator.py  noise_generator.py  peep.py  peep_workflow.py  performance_results.csv  test_eigenface.py  utils.py  utils_image.py
src/static/css/: new_people.css  new_people.css.map  new_people.scss  search_people.css  template.css  template.scss
src/static/js/: new_people.js  search_people.js  show_database.js
src/templates/: index.html  new_people.html  result.html  search_people.html  show_database.html
src/templates/tpl/: footer.html  header.html  template.html
static/css/: search_people.css
static/js/: search_people.js
templates/: new_people.html  search_people.html  show_database.html
templates/tpl/: header.html  template.html
tests/: test_database.py  test_eigenface.py  test_peep.py  test_peep_workflow.py
