[project]
name = "Privacy_preserving_face_recognition"
version = "0.1.0"
description = ""
authors = [
    {name = "Deathvanos",email = "char.mailley@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
